--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ flask-marshmallow==0.14.0
 marshmallow-sqlalchemy==0.24.2
 Flask-HTTPAuth==4.2.0
 passlib
+flasgger==0.9.5
 
 gunicorn
 psycopg2-binary
