--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ marshmallow-sqlalchemy==0.24.2
 Flask-HTTPAuth==4.2.0
 passlib
 flasgger==0.9.5
+apispec==5.1.1
+flask-apispec==0.11.0
 
 gunicorn
 psycopg2-binary
